log/build_2026-04-04_15-01-42/cw2_team_14/stdout_stderr.log
[  8%] Built target cw2_team_14__cpp
[ 11%] Built target cw2_team_14__rosidl_generator_c
[ 11%] Built target ament_cmake_python_copy_cw2_team_14
[ 20%] Built target cw2_team_14__rosidl_typesupport_c
[ 28%] Built target cw2_team_14__rosidl_typesupport_introspection_c
[ 37%] Built target cw2_team_14__rosidl_typesupport_introspection_cpp
[ 45%] Built target cw2_team_14__rosidl_typesupport_fastrtps_cpp
[ 54%] Built target cw2_team_14__rosidl_typesupport_fastrtps_c
[ 62%] Built target cw2_team_14__rosidl_typesupport_cpp
Consolidate compiler generated dependencies of target cw2_team_14_cw2_class_lib
[ 62%] Built target cw2_team_14
[ 65%] Building CXX object CMakeFiles/cw2_team_14_cw2_class_lib.dir/src/cw2_class.cpp.o
[ 68%] Built target cw2_team_14__py
[ 74%] Built target cw2_team_14__rosidl_generator_py
running egg_info
writing cw2_team_14.egg-info/PKG-INFO
writing dependency_links to cw2_team_14.egg-info/dependency_links.txt
writing top-level names to cw2_team_14.egg-info/top_level.txt
reading manifest file 'cw2_team_14.egg-info/SOURCES.txt'
writing manifest file 'cw2_team_14.egg-info/SOURCES.txt'
[ 85%] Built target cw2_team_14__rosidl_typesupport_c__pyext
[ 85%] Built target cw2_team_14__rosidl_typesupport_fastrtps_c__pyext
[ 91%] Built target cw2_team_14__rosidl_typesupport_introspection_c__pyext
[ 91%] Built target ament_cmake_python_build_cw2_team_14_egg
/home/czg22/comp0250_s26_labs/src/courseworks/cw2_team_14/src/cw2_class.cpp: In member function ‘bool cw2::execute_cartesian_path(const std::vector<geometry_msgs::msg::Pose_<std::allocator<void> > >&, const string&, double, double)’:
/home/czg22/comp0250_s26_labs/src/courseworks/cw2_team_14/src/cw2_class.cpp:229:73: error: ‘class rclcpp::Duration’ has no member named ‘to_builtin’
  229 |     trajectory.joint_trajectory.points[i].time_from_start = accumulated.to_builtin();
      |                                                                         ^~~~~~~~~~
gmake[2]: *** [CMakeFiles/cw2_team_14_cw2_class_lib.dir/build.make:76: CMakeFiles/cw2_team_14_cw2_class_lib.dir/src/cw2_class.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:595: CMakeFiles/cw2_team_14_cw2_class_lib.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
